---
source: tests/requests/auth.rs
expression: saved_user
---
Ok(
    Model {
        created_at: DATE,
        updated_at: DATE,
        id: ID
        pid: PID,
        email: "test@loco.com",
        password: "PASSWORD",
        api_key: "lo-PID",
        first_name: "first_name_user1",
        last_name: "last_name_user1",
        fiscal_code: None,
        phone_number: None,
        birth_place: None,
        residence: None,
        color: None,
        image_url: None,
        birth_date: None,
        reset_token: None,
        reset_sent_at: None,
        email_verification_token: Some(
            "PID",
        ),
        email_verification_sent_at: Some(
            DATE,
        ),
        email_verified_at: None,
    },
)
